# Interactive-Adversarial-Terrain-Generation

./: README.md
dirtbox/: .gitignore  CMakeLists.txt  box.code-workspace  references.txt
dirtbox/dirtbox/: CMakeLists.txt
dirtbox/dirtbox/resources/: CMakeLists.txt
dirtbox/dirtbox/resources/shaders/: cs_etes_common.sh  cs_etes_erosion.sc  cs_etes_init.sc  cs_model2_erosion.sc  cs_terrain_update_draw.sc  fs_terrain_render.sc  fs_terrain_render_normal.sc  terrain_common.sh
dirtbox/dirtbox/src/: app.cpp  app.h  main.cpp  mk_input.cpp  mk_input.h  window.cpp  window.h  window_events.h
dirtbox/dirtbox/src/UI/: dbui.cpp  dbui.h  erosion_ui.cpp  erosion_ui.h  gan_generator_editor.cpp  gan_generator_editor.h  log_ui.h  menu_bar.cpp  menu_bar.h  ui_content.h
dirtbox/dirtbox/src/core/: core.cpp  core.h  delegate.h  event.h  task_manager.cpp  task_manager.h
dirtbox/dirtbox/src/ecs/: scene.cpp  scene.h
dirtbox/dirtbox/src/graphics/: buffer.cpp  buffer.h  camera.cpp  camera.h  render_context.h  shader.h  texture.cpp  texture.h
dirtbox/dirtbox/src/graphics/renderers/: terrain_renderer.cpp  terrain_renderer.h
dirtbox/dirtbox/src/imgui/: imgui.cpp  imgui.h
dirtbox/dirtbox/src/resource/: image.cpp  image.h  mesh.h  resource.h  resource_manager.cpp  resource_manager.h
dirtbox/dirtbox/src/terrain/: erosion.h  erosion_model2.cpp  erosion_model2.h  erosion_util.h  etes_erosion.cpp  etes_erosion.h  etes_erosion_gpu.cpp  generator.cpp  generator.h  terrain.cpp  terrain.h  terrain_manager.h
dirtbox/dirtbox/src/util/: box_utils.cpp  box_utils.h  logging.h  mat.h  parameter.h  sharedqueue.h  task.cpp  task.h  vec.h
dirtbox/report_info/3-1/: readme
dirtbox/report_info/3-6/: readme
dirtbox/report_info/week-7/: notes
dirtbox/sketch-to-terrain/: requirements.txt
(+10 files in other folders)
